# crypto-bot

./: .gitignore  README.md  pyproject.toml
backtest/: backtester.py
config/: settings.yaml
docs/plans/: 2026-02-17-crypto-bot-design.md  2026-02-17-crypto-bot-implementation.md
src/: main.py
src/data/: collector.py  sentiment.py
src/exchange/: upbit_client.py
src/llm/: advisor.py  bedrock_client.py  prompts.py
src/notification/: telegram.py
src/risk/: manager.py
src/rl/: finrl_agent.py  signal.py
src/strategy/: dca_rsi.py  indicators.py
src/utils/: config.py  db.py  logger.py
tests/: test_advisor.py  test_backtest.py  test_bedrock_client.py  test_config.py  test_data.py  test_exchange.py  test_indicators.py  test_logger.py  test_main.py  test_notification.py  test_notification_extended.py  test_risk.py  test_rl.py  test_strategy.py  test_utils.py
